<resources>
  <string name="app_name">GoodTrip</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome!"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="invalid_repeat_password">Passwords does not matches</string>
  <string name="invalid_handler">Handler is invalid</string>
  <string name="login_failed">"Login failed"</string>
  <string name="google_authorization_failed">"Google authorization failed"</string>
  <string name="signup_failed">"Sign up failed"</string>
  <string name="surname">Surname</string>
  <string name="name">Name</string>
  <string name="you_are_already_registered">You are Already Registered?</string>
  <string name="you_are_not_registered">You are not registered?</string>
  <string name="handle">Handle</string>
  <string name="sign_in">Sign in</string>
  <string name="login">login</string>
  <string name="register">Register</string>
  <string name="sign_in_via_google">Sign in via Google</string>
  <string name="title_map">Map</string>
  <string name="title_feed">Feed</string>
  <string name="title_places">Places</string>
  <string name="title_profile">Profile</string>
  <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
  <string name="plantripbutton">planTripButton</string>
  <string name="create_new_trip">Create new trip</string>
  <string name="trip_name">Trip Name:</string>
  <string name="add_trip">Add Trip</string>
  <string name="select_dates">Select Dates</string>
  <string name="trip">Trip</string>
  <string name="select_arrival_date">Select Arrival Date</string>
  <string name="arrival">Arrival</string>
  <string name="select_departure_date">Select Departure Date</string>
  <string name="departure">Departure</string>
  <string name="enter_travel_name">Enter Travel Name</string>
  <string name="travel_name">Travel Name</string>
  <string name="add_country">Add country</string>
  <string name="trip_word">Trip</string>
  <string name="budget_usd">Budget (USD):</string>
  <string name="enter_budget">Enter Budget</string>
  <string name="not_valid_name">Trip name should have less than 32 characters</string>
  <string name="not_valid_date">Date should write in dd.mm.yyyy format</string>
  <string name="not_valid_date_order">End of trip date should be after then start of trip</string>
  <string name="country_error">Country error</string>
  <string name="money_error">Money should be positive number</string>
  <string name="route">Route</string>
  <string name="add_country_and_cities_there">Add country and cities there</string>
  <string name="country_name">Country name</string>
  <string name="enter_country_name">Enter country name</string>
  <string name="city">City</string>
  <string name="enter_city">Enter city</string>
  <string name="add_city">Add city</string>
  <string name="country">Country</string>
  <string name="enter_country">Enter country</string>
  <string name="plus">+</string>
  <string name="title_profile_button">Profile</string>
  <string name="Friends">Friends</string>
  <string name="Settings">Settings</string>
  <string name="profileImg">ProfileImg</string>
  <string name="userHandle">Handle</string>
  <string name="fullName">Full Name</string>
  <string name="title">Title</string>
  <string name="countries">Countries</string>
  <string name="name_surname">Name Surname</string>
  <string name="berserk">Что вершит судьбу человечества в этом мире? Некое незримое существо или закон, подобно Длани Господней парящей над миром? По крайне мере истинно то, что человек не властен даже над своей волей.</string>
  <string name="date">Date</string>
  <string name="date_of_publication">date of publication</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="loginButton">Login</string>
  <string name="signUpButton">Sign Up</string>
  <string name="editTextName">Name</string>
  <string name="log_in_text">Log In</string>
  <string name="already_have_an_account">Already have an account?</string>
  <string name="sign_in_via_google_text">Sign In via Google</string>
  <string name="or">or</string>
  <string name="handler">Handler</string>
  <string name="surname_text">Surname</string>
  <string name="sign_up_text">Sign Up</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="don_t_have_an_account">Don\'t have an account?</string>
  <string name="sign_up_button">Sign Up</string>
  <string name="log_in">Log In</string>
  <string name="repeat_password">Repeat password</string>
  <string name="details">Details</string>
  <string name="notes">Notes</string>
  <string name="my_trips">My trips</string>
  <string name="duration">duration</string>
  <string name="add_new_note">Add new note</string>
  <string name="plan_your_trip">Plan your trip!</string>
  <string name="log_out">Log out</string>
  <string name="_10">10</string>
  <string name="distance_from_you">Distance from you:</string>
</resources>