<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".ui.authentication.SignUpFragment"
  android:layout_height="match_parent"
  android:layout_width="match_parent">
  <LinearLayout
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    android:layout_marginTop="45dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_marginBottom="20dp"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:text="@string/sign_up_text"
      android:textSize="50sp"
      android:textColor="@color/black"
      android:layout_gravity="center"
      android:textStyle="bold" />
    <EditText
      android:id="@+id/editTextName"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:hint="@string/editTextName"
      android:background="@drawable/edit_text_background"
      android:padding="12dp"
      android:layout_gravity="center"
      android:inputType="textEmailAddress" />

    <EditText
      android:id="@+id/editTextSurname"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:hint="@string/surname_text"
      android:background="@drawable/edit_text_background"
      android:padding="12dp"
      android:layout_gravity="center"
      android:inputType="textEmailAddress" />
    <EditText
      android:id="@+id/editTextHandler"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:hint="@string/handler"
      android:background="@drawable/edit_text_background"
      android:padding="12dp"
      android:layout_gravity="center"
      android:inputType="textEmailAddress" />

    <EditText
      android:id="@+id/editTextEmail"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:hint="@string/email"
      android:background="@drawable/edit_text_background"
      android:padding="12dp"
      android:layout_gravity="center"
      android:inputType="textEmailAddress" />

    <EditText
      android:id="@+id/editTextPassword"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/edit_text_background"
      android:hint="@string/password"
      android:layout_gravity="center"
      android:padding="12dp"
      android:inputType="textPassword" />
    <EditText
      android:id="@+id/editTextRepeatedPassword"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/edit_text_background"
      android:hint="@string/repeat_password"
      android:layout_gravity="center"
      android:padding="12dp"
      android:inputType="textPassword" />
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:orientation="horizontal"
      android:layout_gravity="center">
      <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/light_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
      <Button
        android:background="@drawable/button"
        android:id="@+id/signUpButton"
        android:padding="12dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:layout_width="300dp"
        android:text="@string/signUpButton"
        android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
      android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:gravity="center_horizontal">
      <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="15sp" />

      <TextView
        android:id="@+id/goToLogIn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/log_in_text"
        android:textSize="15sp"
        android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
      android:layout_gravity="center"
      android:layout_width="300dp"
      android:layout_marginTop="20dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@android:color/darker_gray"
        android:layout_marginHorizontal="8dp" />

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray" />
    </LinearLayout>
    <LinearLayout
      android:layout_gravity="center"
      android:layout_height="65dp"
      android:layout_width="300dp"
      android:layout_marginTop="20dp"
      android:id="@+id/googleSignInButton"
      android:clickable="true"
      android:orientation="horizontal"
      android:background="@drawable/google_sign_up_button">

      <ImageView
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_google" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="23sp"
        android:text="@string/sign_in_via_google_text" />
    </LinearLayout>


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>