<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="ru.hse.goodtrip.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_feed"
            app:destination="@id/navigation_feed" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_places"
            app:destination="@id/navigation_places" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.hse.goodtrip.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="ru.hse.goodtrip.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_places"
        android:name="ru.hse.goodtrip.ui.places.PlacesFragment"
        android:label="@string/title_places"
        tools:layout="@layout/fragment_places" />
</navigation>