<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="500dp"
  android:layout_height="500dp"
  android:background="@color/white">

  <TextView
    android:id="@+id/add_country_and_cities_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginStart="40dp"
    android:layout_marginTop="16dp"
    android:text="@string/add_country_and_cities_there"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/country_name_label"
    android:layout_width="62dp"
    android:layout_height="48dp"
    android:padding="16dp"
    android:text="Country"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_country_and_cities_title" />

  <AutoCompleteTextView
    android:id="@+id/enter_country_name"
    android:layout_width="172dp"
    android:layout_height="48dp"
    android:autofillHints=""
    android:hint="@string/enter_country_name"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@id/country_name_label"
    app:layout_constraintTop_toTopOf="@id/country_name_label" />

  <Button
    android:id="@+id/popup_add_city"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:text="@string/add_city"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.44"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/country_name_label" />

  <LinearLayout
    android:id="@+id/add_cities"
    android:layout_width="246dp"
    android:layout_height="500dp"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/popup_add_city">

    <include
      android:id="@+id/add_city"
      layout="@layout/item_add_city"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </LinearLayout>

  <Button
    android:id="@+id/popup_add_country"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_cities"
    android:text="@string/add_country" />

</androidx.constraintlayout.widget.ConstraintLayout>